[package]
name = "hayabusa-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "hayabusa"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
anyhow = "1.0.86"