[package]
name = "hayabusa-common"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[dependencies]
solana-account-view.workspace = true
solana-address = { workspace = true, features = ["decode"] }