[package]
name = "hayabusa-cpi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Hayabusa CPI utils"

[dependencies]
solana-account-view.workspace = true
solana-address.workspace = true
solana-instruction-view = { workspace = true, features = ["cpi"] }
solana-program-error.workspace = true
pinocchio-log.workspace = true
hayabusa-errors.workspace = true
hayabusa-utility.workspace = true