[package]
name = "hayabusa-discriminator"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Hayabusa discriminator"

[dependencies]
solana-account-view.workspace = true
pinocchio-log.workspace = true
hayabusa-errors.workspace = true
hayabusa-utility.workspace = true