[package]
name = "hayabusa-entrypoint"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[features]
copy = ["solana-account-view/copy"]
alloc = ["solana-instruction-view/slice-cpi"]

[dependencies]
solana-address.workspace = true
solana-account-view.workspace = true
solana-instruction-view.workspace = true
solana-program-error.workspace = true
hayabusa-utility.workspace = true
hayabusa-syscalls.workspace = true