[package]
name = "jutsu-errors-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
jutsu-syn.workspace = true
syn.workspace = true
proc-macro2.workspace = true
quote.workspace = true