[package]
name = "hayabusa-pda"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Hayabusa PDA"

[dependencies]
hayabusa-errors.workspace = true
hayabusa-syscalls.workspace = true
solana-address.workspace = true
solana-program-error.workspace = true