[package]
name = "hayabusa-system-program"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Hayabusa System Program interface"

[dependencies]
solana-account-view.workspace = true
solana-address = { workspace = true, features = ["decode"] }
solana-program-error.workspace = true
solana-instruction-view = { workspace = true, features = ["cpi"] }
hayabusa-cpi.workspace = true
hayabusa-errors.workspace = true
hayabusa-sysvars.workspace = true