[package]
name = "hayabusa-token-interface"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[dependencies]
hayabusa-accounts.workspace = true
hayabusa-token.workspace = true
hayabusa-token2022.workspace = true
hayabusa-common.workspace = true