[package]
name = "hayabusa-token"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Hayabusa Token program interface"

[dependencies]
pinocchio-log.workspace = true
hayabusa-cpi.workspace = true
hayabusa-errors.workspace = true
hayabusa-utility.workspace = true
hayabusa-ser.workspace = true
hayabusa-accounts.workspace = true
hayabusa-common.workspace = true
solana-instruction-view = { workspace = true, features = ["cpi"] }