[package]
name = "hayabusa-token2022"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Hayabusa Token2022 program interface"
publish = false

[dependencies]
pinocchio-log.workspace = true
hayabusa-cpi.workspace = true
hayabusa-errors.workspace = true
hayabusa-utility.workspace = true
hayabusa-ser.workspace = true
hayabusa-accounts.workspace = true
hayabusa-common.workspace = true
solana-instruction-view = { workspace = true, features = ["cpi"] }