[package]
name = "hayabusa-utility"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Hayabusa utilities"

[dependencies]
solana-program-error.workspace = true
solana-address.workspace = true
pinocchio-log.workspace = true
hayabusa-errors.workspace = true