[package]
name = "counter-program"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []

[dependencies]
bytemuck.workspace = true
hayabusa.workspace = true
hayabusa-token.workspace = true

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
overflow-checks = true
panic = "abort"